# Ortelius

./: .gitignore  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
assets/protocol_assets/system/graph_population/v001/: README.md  graph_population_control_protocol.md  graph_population_protocol_schema.md  manifest.json
docs/: llm_context.md
src/ortelius/: __init__.py  cli.py  graph_io.py  model.py  paths.py  protocol_assets.py  validate.py
src/ortelius/materialize/: __init__.py  dgl.py  networkx.py  pyg.py
tests/: test_cli.py  test_graph_io.py  test_materialize_dgl.py  test_materialize_networkx.py  test_materialize_pyg.py  test_package.py  test_protocol_assets.py  test_readme_badges.py  test_validate.py
tests/fixtures/protocol_assets/invalid_malformed_cursor/loop_specs/: 10_instance_edge_completion.md
tests/fixtures/protocol_assets/invalid_missing_loop_spec_file/: manifest.json
tests/fixtures/protocol_assets/invalid_missing_loop_spec_file/loop_specs/: 01_domain_suitability.md  02_graph_json_initialization.md  09_instance_field_completion.md
tests/fixtures/protocol_assets/invalid_missing_loop_spec_heading/loop_specs/: 01_domain_suitability.md  03_type_node_discovery.md  04_type_field_discovery.md  (+2 more)
tests/fixtures/protocol_assets/invalid_missing_ordered_loop_specs/: manifest.json
tests/fixtures/protocol_assets/invalid_missing_validation_rule/: graph_population_protocol.md
tests/fixtures/protocol_assets/invalid_path_reconciliation/: manifest.json
tests/fixtures/protocol_assets/minimal_generated_bundle/: manifest.json
(+42 files in other folders)
